# 2025-2026---autumn

./: README.md  gaussian_elimination.h  main.cpp
1 problem/gaussian_elimination/: CMakeLists.txt
1 problem/matrix/: CMakeLists.txt  matrix_io.h
1 problem/sum_func/: CMakeLists.txt  sum_func.h
2 problem/: CMakeLists.txt
2 problem/gaussian_elimination/: gaussian_elimination.cpp
2 problem/sum_func/: CMakeLists.txt  sum_func.cpp  sum_func.h
gaussian_elimination/: gaussian_elimination.cpp  gaussian_elimination.h
matrix/: matrix_io.cpp  matrix_io.h
sum_func/: sum_func.cpp
