cmake_minimum_required(VERSION 3.10)
project(Gauss)
enable_language(CXX)
add_subdirectory("/var/home/student/Рабочий стол/1 problem/matrix" ${CMAKE_CURRENT_BINARY_DIR}/matrix)
add_subdirectory("/var/home/student/Рабочий стол/1 problem/sum_func" ${CMAKE_CURRENT_BINARY_DIR}/sum_func)
add_subdirectory("/var/home/student/Рабочий стол/1 problem/gaussian_elimination" ${CMAKE_CURRENT_BINARY_DIR}/gaussian_elimination)
add_executable(exec main.cpp)
target_include_directories(exec PUBLIC "/var/home/student/Рабочий стол/1 problem/matrix")
target_link_libraries(exec PUBLIC matrix)
target_include_directories(exec PUBLIC "/var/home/student/Рабочий стол/1 problem/sum_func")
target_link_libraries(exec PUBLIC sum_func)
target_include_directories(exec PUBLIC "/var/home/student/Рабочий стол/1 problem/gaussian_elimination")
target_link_libraries(exec PUBLIC gaussian_elimination)
